# nornir_table_inventory

./: .gitignore  AGENTS.md  README.md  pyproject.toml  readme.cn.md  readme.md  requirements.txt
demo/: config.yml  csv_demo_from_config_file.py  excel_demo.py  inventory.csv  inventory.xlsx  t.py
nornir_table_inventory/plugins/inventory/: __init__.py  table.py
